--- a/docs/docs/03-Editor/01-Simple/API.mdx
+++ b/docs/docs/03-Editor/01-Simple/API.mdx
@@ -1,4 +1,4 @@
-import "/src/css/api.css";
+<div class="api">
 
  
 
@@ -256,3 +256,5 @@ func WithSelectedTextStyle[T any](style lipgloss.Style) Option[T]
 ```go
 func WithTokenRegex[T any](tokenRegex string) Option[T]
 ```
+
+</div>
