--- a/docs/docs/03-Editor/02-Command/API.mdx
+++ b/docs/docs/03-Editor/02-Command/API.mdx
@@ -1,4 +1,4 @@
-import "/src/css/api.css";
+<div class="api">
 
  
 
@@ -591,3 +591,5 @@ func (t TokenValue) RawValue() string
 ```go
 func (t TokenValue) Value() string
 ```
+
+</div>
