--- a/docs/docs/03-Editor/03-Parser/API.mdx
+++ b/docs/docs/03-Editor/03-Parser/API.mdx
@@ -1,4 +1,4 @@
-import "/src/css/api.css";
+<div class="api">
 
  
 
@@ -301,3 +301,5 @@ func (m *ParserModel[T, G]) ParsedBeforeCursor() (*G, error)
 ```go
 func (m *ParserModel[T, G]) SetValue(value string)
 ```
+
+</div>
